--- a/views/details.html
+++ b/views/details.html
@@ -15,25 +15,19 @@
     </header>
 
     <!-- Repeating block -->
-    <div class="text-center" data-ng-repeat="bookDetail in dataFromList | filter : search">
-        <div class="col-xs-4">
+    <div class="col-xs-4 text-center" data-ng-repeat="bookDetail in dataFromList | filter : search">
         <div data-ng-click="openBook(bookDetail)">
-            <img ng-src ="{{getImagePath(bookDetail)}}" alt="Book Cover">
+            <img class="img-responsive" ng-src="{{getImagePath(bookDetail)}}" alt="Book Cover">
             <header>
                 <strong>
                     <a href="#">   
-                {{ bookDetail.title }}
-            </a>
-            </strong>
+                        {{ bookDetail.title }}
+                    </a>
+                </strong>
             </header>
             <p>
                 {{ bookDetail.authors[0].name }}
-
             </p>
         </div>
     </div>
-    </div>
-    <!-- <div data-ng-if="!bookDetail.formats.hasOwnProperty('image/jpeg')">
-        <h2 class="cen">No Image available</h2>
-    </div> -->
 </section>
