--- a/assets/css/generic.css
+++ b/assets/css/generic.css
@@ -334,6 +334,9 @@
 .text-center{
     text-align: center;
 }
+.text-initial{
+  text-align: initial;
+}
 .left-cen{
     display: flex;
     justify-content: flex-start;
